attic/old_tests/xml/invalidxml/raDec/badra2.xml.README
badra2.xml: BAD ra is negative -- range starts at 0.0
